# pdf2text

./: .gitconfig.sample  .gitignore  README.md  config.ini.sample  config.yaml  config.yaml.sample  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json
database/: env.py
database/versions/: 0088295ddbff_create_documents_table.py
docs/: conf.py  index.rst
locales/: messages.pot
locales/en/LC_MESSAGES/: messages.po
locales/ja/LC_MESSAGES/: messages.po
src/: cli.py  direct_watcher.py  lang_detector.py  llm_sample.py  model_downloader.py  pdf_processor.py  text_jsonizer.py  text_summarizer.py
src/cli/: main.py
src/cli/develop/: __init__.py  alembic_cli.py  locale.py
src/models/: __init__.py  document.py
src/pdf2text/: extract.py  meta.py
src/util/: config.py  convert.py
src/workflow/: main.py
